# EV-Charging-Demand-Optimisation

./: .pre-commit-config.yaml  08_train_regional_models_with_weather.ipynb  AGENTS.md  EV_Charging_Cloud_Native_Architecture_Brief.md  README.md  prd.json  progress.txt  ralph-loop.sh  ralph-once.sh
.github/workflows/: ci.yml
energy-forecasting/: .dockerignore  .gitignore  Dockerfile  config.toml  pyproject.toml
energy-forecasting/notebooks/: 01_bronze_carbon_intensity_regional.ipynb  02_silver_carbon_intensity_regional.ipynb  03_gold_carbon_intensity.ipynb  04_train_regional_models.ipynb  05_regional_weather_bronze.ipynb  06_silver_regional_weather.ipynb  07_gold_weather_regional.ipynb  08_train_regional_models_with_weather.ipynb  09_compare_weather_and_noweather_results.ipynb  10_log_models_to_mlflow_registry.ipynb  Carbon_intensity_of_charging_points_service_stations.ipynb.ipynb  carbon_intensity_of_charging_points_service_stations.ipynb  model_selection.ipynb  shap_analysis.ipynb
energy-forecasting/scripts/: fetch_data.py
energy-forecasting/src/: __init__.py  logging_config.py
energy-forecasting/src/api/: cache.py  main.py
energy-forecasting/src/data/: run_data_collection_pipeline.py
energy-forecasting/src/features/: alignment.py  calendar.py  calendar_features.py  inference.py  lags.py  penetration.py  pipeline.py  rolling.py  run_feature_pipeline.py  store.py  weather_join.py
energy-forecasting/tests/: conftest.py  test_fixtures.py  test_imports.py  test_logging.py  test_scaffold.py
energy-forecasting/tests/data/: test_acn_loader.py  test_carbon_intensity.py  test_generation_mix.py  test_incremental.py  test_retry.py  test_storage.py  test_validate_carbon.py  test_validate_ev.py  test_validate_generation.py  test_validate_weather.py  test_validation_report.py  test_weather.py
(+41 files in other folders)
